fixed nav cropping

--- a/SP20.P05.Web/ClientApp/src/Pages/AboutUs/AboutUs.css
+++ b/SP20.P05.Web/ClientApp/src/Pages/AboutUs/AboutUs.css
@@ -1,7 +1,7 @@
 .background-img {
 
     /* Set up positioning */
-    position: fixed;
+    background-size: cover;
     top:0;
     left:0;
     margin-left: 56px;
